@@ -18,6 +18,8 @@ package io.micronaut.context.env;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import edu.umd.cs.findbugs.annotations.Nullable;
 import io.micronaut.context.ApplicationContextConfiguration;
+import io.micronaut.context.banner.MicronautBanner;
+import io.micronaut.context.banner.ResourceBanner;
 import io.micronaut.context.exceptions.ConfigurationException;
 import io.micronaut.core.convert.ConversionContext;
 import io.micronaut.core.convert.TypeConverter;
@@ -82,6 +84,7 @@ public class DefaultEnvironment extends PropertySourcePropertyResolver implement
     private static final String DO_SYS_VENDOR_FILE = "/sys/devices/virtual/dmi/id/sys_vendor";
     private static final Boolean DEDUCE_ENVIRONMENT_DEFAULT = true;
     private static final List<String> DEFAULT_CONFIG_LOCATIONS = Arrays.asList("classpath:/", "file:config/");
+    private static final String BANNER_NAME = "micronaut-banner.txt";
 
     protected final ClassPathResourceLoader resourceLoader;
     protected final List<PropertySource> refreshablePropertySources = new ArrayList<>(10);
@@ -111,6 +114,10 @@ public class DefaultEnvironment extends PropertySourcePropertyResolver implement
     public DefaultEnvironment(@NonNull ApplicationContextConfiguration configuration) {
         super(configuration.getConversionService());
         this.configuration = configuration;
+        this.resourceLoader = configuration.getResourceLoader();
+
+        printBanner();
+
         Set<String> environments = new LinkedHashSet<>(3);
         List<String> specifiedNames = new ArrayList<>(configuration.getEnvironments());
 
@@ -140,7 +147,6 @@ public class DefaultEnvironment extends PropertySourcePropertyResolver implement
         if (LOG.isInfoEnabled() && !environments.isEmpty()) {
             LOG.info("Established active environments: {}", environments);
         }
-        this.resourceLoader = configuration.getResourceLoader();
         this.annotationScanner = createAnnotationScanner(classLoader);
         List<String> configLocations = configuration.getOverrideConfigLocations() == null ?
                 new ArrayList<>(DEFAULT_CONFIG_LOCATIONS) : configuration.getOverrideConfigLocations();
@@ -969,6 +975,20 @@ public class DefaultEnvironment extends PropertySourcePropertyResolver implement
             return "digitalocean".equalsIgnoreCase(sysVendor);
         } catch (IOException e) {
             return false;
+        }
+    }
+
+    private void printBanner() {
+        if (!configuration.isBannerEnabled()) {
+            return;
+        }
+        PrintStream out = System.out;
+
+        Optional<URL> resource = resourceLoader.getResource(BANNER_NAME);
+        if (resource.isPresent()) {
+            new ResourceBanner(resource.get(), out).print();
+        } else {
+            new MicronautBanner(out).print();
         }
     }
 
